Regression: Unable to select mask points in clip editor #98765

Closed
opened 2022-06-10 15:01:08 +02:00 by Sergey Sharybin · 7 comments

System Information
Operating system: macOS-12.4-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon PRO W6800X OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.54

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-07 18:08, hash: 173a15bcda
Worked: Commits prior to 048c769774

Short description of error

Since 048c769774 it is not possible to select mask points in Mask mode of the Clip Editor.

The fact that mask selection did not return PASS_THROUGH was a design decision to ensure selection order in the clip editor.

A more proper fix would be to make it so the selection is handled by the clip editor's selection (instead of relying on the order of keymaps and the operators' PASS_THROUGH). That'd be quite a big change and if we do a corrective 3.2 release we need something safer. It might not be too bad to sacrifice drag-tweak (in clip editor at least) as non-working selection is much worse.

Exact steps for others to reproduce the error

Create a new mask in movie clip editor editor and try to select mouse with RMB.
Or, open the attach file and try to do selection. mask_select.blend

**System Information** Operating system: macOS-12.4-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon PRO W6800X OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.54 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-07 18:08, hash: `173a15bcda` Worked: Commits prior to 048c769774 **Short description of error** Since 048c769774ac it is not possible to select mask points in Mask mode of the Clip Editor. The fact that mask selection did not return `PASS_THROUGH` was a design decision to ensure selection order in the clip editor. A more proper fix would be to make it so the selection is handled by the clip editor's selection (instead of relying on the order of keymaps and the operators' `PASS_THROUGH`). That'd be quite a big change and if we do a corrective 3.2 release we need something safer. It might not be too bad to sacrifice drag-tweak (in clip editor at least) as non-working selection is much worse. **Exact steps for others to reproduce the error** Create a new mask in movie clip editor editor and try to select mouse with RMB. Or, open the attach file and try to do selection. [mask_select.blend](https://archive.blender.org/developer/F13143310/mask_select.blend)
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii

We can select with LMB still (although RMB is set)
While it may involve major changes, it is a regression and perhaps the solution deserves to be backported to 3.2 (imho).

Cc. @ideasman42

We can select with LMB still (although RMB is set) While it may involve major changes, it is a regression and perhaps the solution deserves to be backported to 3.2 (imho). Cc. @ideasman42

This issue was referenced by 7ff5f95657

This issue was referenced by 7ff5f9565781e26d4613fed3db2660fa8a649c8e

This issue was referenced by ea39d808b5

This issue was referenced by ea39d808b516ff5b7b6465707ecfd5e875cce3cc
Author
Owner

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2022-06-15 10:24:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98765
No description provided.